--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "mocha-multi": "1.0.1",
     "chai-spies": "^1.0.0",
     "nock": "^10.0.2",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.3.0"
   }
 }
